--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <p>biodata</p>
+    <p>nama = ibnu balya</p>
+    <p> nis = 24.7398</p>
+    <p> cita-cita= pengusaha</p>
+    <p> semoga cita-cita tercapai...Aamiin</p>
+</body>
+</html>
